Mehrspielercontroler programiert sowie SignUp pages für user und adnmin geändert
