# Backhand/YEEEE/openapi_server/models/mehrspieler_start_post_request.py
@@ -1,63 +1,27 @@
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
 from openapi_server.models.base_model import Model
 from openapi_server import util
 
 
 class MehrspielerStartPostRequest(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, thema_id=None):  # noqa: E501
-        """MehrspielerStartPostRequest - a model defined in OpenAPI
-
-        :param thema_id: The thema_id of this MehrspielerStartPostRequest.  # noqa: E501
-        :type thema_id: str
-        """
+    def __init__(self, code=None):
         self.openapi_types = {
-            'thema_id': str
+            'code': str
         }
-
         self.attribute_map = {
-            'thema_id': 'themaId'
+            'code': 'code'
         }
-
-        self._thema_id = thema_id
+        self._code = code
 
     @classmethod
     def from_dict(cls, dikt) -> 'MehrspielerStartPostRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The _mehrspieler_start_post_request of this MehrspielerStartPostRequest.  # noqa: E501
-        :rtype: MehrspielerStartPostRequest
-        """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def thema_id(self) -> str:
-        """Gets the thema_id of this MehrspielerStartPostRequest.
+    def code(self) -> str:
+        return self._code
 
-
-        :return: The thema_id of this MehrspielerStartPostRequest.
-        :rtype: str
-        """
-        return self._thema_id
-
-    @thema_id.setter
-    def thema_id(self, thema_id: str):
-        """Sets the thema_id of this MehrspielerStartPostRequest.
-
-
-        :param thema_id: The thema_id of this MehrspielerStartPostRequest.
-        :type thema_id: str
-        """
-        if thema_id is None:
-            raise ValueError("Invalid value for `thema_id`, must not be `None`")  # noqa: E501
-
-        self._thema_id = thema_id
+    @code.setter
+    def code(self, code: str):
+        if code is None:
+            raise ValueError("`code` darf nicht None sein.")
+        self._code = code
